--- a/src/fidmaa/form.ui
+++ b/src/fidmaa/form.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>669</width>
+    <width>941</width>
     <height>666</height>
    </rect>
   </property>
@@ -28,19 +28,6 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0" rowspan="2">
-      <widget class="QClickableLabel" name="imageLabel">
-       <property name="minimumSize">
-        <size>
-         <width>480</width>
-         <height>640</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Image</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
@@ -118,8 +105,11 @@
            <property name="prefix">
             <string/>
            </property>
+           <property name="minimum">
+            <number>45</number>
+           </property>
            <property name="maximum">
-            <number>180</number>
+            <number>135</number>
            </property>
            <property name="value">
             <number>90</number>
@@ -130,8 +120,11 @@
        </item>
        <item>
         <widget class="QSlider" name="angleSlider">
+         <property name="minimum">
+          <number>45</number>
+         </property>
          <property name="maximum">
-          <number>180</number>
+          <number>135</number>
          </property>
          <property name="value">
           <number>90</number>
@@ -162,9 +155,15 @@
         </widget>
        </item>
        <item>
-        <widget class="QSlider" name="horizontalSlider_2">
+        <widget class="QSlider" name="angleSlider_2">
+         <property name="minimum">
+          <number>0</number>
+         </property>
          <property name="maximum">
           <number>100</number>
+         </property>
+         <property name="value">
+          <number>40</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -172,9 +171,35 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="showChartButton">
+        <widget class="QLabel" name="label">
          <property name="text">
-          <string>Show chart</string>
+          <string>Depth cutoff</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSpinBox" name="depthCutoffValue">
+         <property name="suffix">
+          <string> pixels</string>
+         </property>
+         <property name="maximum">
+          <number>255</number>
+         </property>
+         <property name="value">
+          <number>127</number>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSlider" name="horizontalSlider">
+         <property name="maximum">
+          <number>255</number>
+         </property>
+         <property name="value">
+          <number>127</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
@@ -193,7 +218,45 @@
        </property>
       </spacer>
      </item>
+     <item row="0" column="0" rowspan="2">
+      <widget class="QClickableLabel" name="imageLabel">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>480</width>
+         <height>640</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>480</width>
+         <height>640</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Image</string>
+       </property>
+      </widget>
+     </item>
     </layout>
+   </item>
+   <item row="0" column="1">
+    <widget class="QClickableLabel" name="chartLabel">
+     <property name="minimumSize">
+      <size>
+       <width>255</width>
+       <height>640</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
    </item>
   </layout>
   <action name="actionShow_chart">
@@ -228,7 +291,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>horizontalSlider_2</sender>
+   <sender>angleSlider_2</sender>
    <signal>valueChanged(int)</signal>
    <receiver>areaValue</receiver>
    <slot>setValue(int)</slot>
@@ -262,7 +325,7 @@
   <connection>
    <sender>areaValue</sender>
    <signal>valueChanged(int)</signal>
-   <receiver>horizontalSlider_2</receiver>
+   <receiver>angleSlider_2</receiver>
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -272,6 +335,38 @@
     <hint type="destinationlabel">
      <x>610</x>
      <y>247</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>horizontalSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>depthCutoffValue</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>557</x>
+     <y>342</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>545</x>
+     <y>309</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>depthCutoffValue</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>horizontalSlider</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>636</x>
+     <y>305</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>636</x>
+     <y>343</y>
     </hint>
    </hints>
   </connection>
