--- a/src/fidmaa/form.ui
+++ b/src/fidmaa/form.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>941</width>
+    <width>1053</width>
     <height>666</height>
    </rect>
   </property>
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Widget</string>
+   <string>FIDMAA</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
@@ -40,7 +40,7 @@
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Midline</string>
+          <string>Midline point - click at the chin to set:</string>
          </property>
         </widget>
        </item>
@@ -90,7 +90,7 @@
          <item>
           <widget class="QLabel" name="label_5">
            <property name="text">
-            <string>angle:</string>
+            <string>angle (skew):</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -137,7 +137,7 @@
        <item>
         <widget class="QLabel" name="label_7">
          <property name="text">
-          <string>Averaging area (width)</string>
+          <string>Averaging area (width):</string>
          </property>
         </widget>
        </item>
@@ -150,7 +150,7 @@
           <number>100</number>
          </property>
          <property name="value">
-          <number>40</number>
+          <number>10</number>
          </property>
         </widget>
        </item>
@@ -163,7 +163,7 @@
           <number>100</number>
          </property>
          <property name="value">
-          <number>40</number>
+          <number>10</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -173,7 +173,7 @@
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>Depth cutoff</string>
+          <string>Depth cutoff:</string>
          </property>
         </widget>
        </item>
@@ -203,20 +203,14 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QPlainTextEdit" name="dataOutputEdit">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
       </layout>
-     </item>
-     <item row="1" column="1">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
      </item>
      <item row="0" column="0" rowspan="2">
       <widget class="QClickableLabel" name="imageLabel">
@@ -254,7 +248,7 @@
       </size>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>Chart</string>
      </property>
     </widget>
    </item>
