--- a/src/fidmaa_gui/form.ui
+++ b/src/fidmaa_gui/form.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1053</width>
-    <height>666</height>
+    <height>640</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,7 +19,7 @@
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>666</height>
+    <height>640</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -47,8 +47,8 @@
   <widget class="QClickableLabel" name="imageLabel">
    <property name="geometry">
     <rect>
-     <x>13</x>
-     <y>13</y>
+     <x>20</x>
+     <y>10</y>
      <width>480</width>
      <height>640</height>
     </rect>
@@ -75,34 +75,38 @@
     <string>Image</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>503</x>
+     <x>510</x>
      <y>0</y>
      <width>263</width>
-     <height>582</height>
+     <height>641</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QPushButton" name="loadJPEGButton">
-      <property name="text">
-       <string>&amp;Load image</string>
-      </property>
-     </widget>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QPushButton" name="loadJPEGButton">
+        <property name="text">
+         <string>&amp;Load image</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="open3DViewButton">
+        <property name="text">
+         <string>&amp;Open 3D view</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item>
-     <widget class="QPushButton" name="open3DViewButton">
+     <widget class="QPushButton" name="showZoomWindowButton">
       <property name="text">
-       <string>&amp;Open 3D view</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>Midline point - click at the chin to set:</string>
+       <string>&amp;Open zoom window</string>
       </property>
      </widget>
     </item>
@@ -197,79 +201,13 @@
      </widget>
     </item>
     <item>
-     <widget class="QLabel" name="label_7">
-      <property name="text">
-       <string>Averaging area (width):</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSpinBox" name="areaValue">
-      <property name="suffix">
-       <string> pixels</string>
-      </property>
-      <property name="minimum">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <number>100</number>
-      </property>
-      <property name="value">
-       <number>10</number>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSlider" name="angleSlider_2">
-      <property name="minimum">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <number>100</number>
-      </property>
-      <property name="value">
-       <number>10</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>Depth cutoff:</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSpinBox" name="depthCutoffValue">
-      <property name="suffix">
-       <string> pixels</string>
-      </property>
-      <property name="maximum">
-       <number>255</number>
-      </property>
-      <property name="value">
-       <number>127</number>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSlider" name="horizontalSlider">
-      <property name="maximum">
-       <number>255</number>
-      </property>
-      <property name="value">
-       <number>127</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item>
      <widget class="QPlainTextEdit" name="dataOutputEdit">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>380</height>
+       </size>
+      </property>
       <property name="readOnly">
        <bool>true</bool>
       </property>
@@ -309,22 +247,6 @@
    </hints>
   </connection>
   <connection>
-   <sender>angleSlider_2</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>areaValue</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>558</x>
-     <y>251</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>578</x>
-     <y>213</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>angleValue</sender>
    <signal>valueChanged(int)</signal>
    <receiver>angleSlider</receiver>
@@ -337,54 +259,6 @@
     <hint type="destinationlabel">
      <x>633</x>
      <y>152</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>areaValue</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>angleSlider_2</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>598</x>
-     <y>209</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>610</x>
-     <y>247</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>horizontalSlider</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>depthCutoffValue</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>557</x>
-     <y>342</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>545</x>
-     <y>309</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>depthCutoffValue</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>horizontalSlider</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>636</x>
-     <y>305</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>636</x>
-     <y>343</y>
     </hint>
    </hints>
   </connection>
